# soulspark

./: Cargo.toml  build.rs  t.txt
kra/: leaf.kra  log-top.kra  log.kra  stone.kra  stone.kra~  wood.kra~
res/: dirt_block.mtl  grass_block.mtl  hk416_fade.mtl  waterblock.mtl
res/blender_models/: dirt_block.blend  grass_block.blend  grass_block.blend1  waterblend.blend
res/data/: structure_manifest.json  texture_manifest.json
res/shaders/: objectshader.wgsl  surfaceshader.wgsl
res/structures/: tree0.struct.json
res/textures/: arcane_grass_side.png~  grass_side.png~  sand.png~  stone.png~
src/: main.rs
src/blocks/: airblock.rs  block.rs  dirtblock.rs  grassblock.rs  leafblock.rs  logblock.rs  mod.rs  stoneblock.rs
src/engine/: color4.rs  material.rs  mesh.rs  mod.rs  model.rs  surfacevertex.rs  texture.rs  texture_loader.rs  vertex.rs
src/gui/: guiobject.rs  guirenderer.rs  mod.rs  uistate.rs
src/gui/elements/: frame.rs  mod.rs  screenui.rs  slider.rs  table.rs  textbutton.rs  textlabel.rs  uialign.rs
src/internal/: camera.rs  depthsort.rs  mod.rs  raycaster.rs  renderer.rs  renderpipeline.rs  renderstorage.rs  window.rs
src/shaders/: objectshader.wgsl  surface.wgsl
src/state/: workspace.rs
src/util/: debugger.rs  helpers.rs  inputservice.rs  mod.rs  threadsignal.rs
src/vox/: binarymesher.rs  chunk.rs  chunk_manager.rs  chunkactionqueue.rs  mesher.rs  mod.rs  structure_loader.rs  worker_threads.rs  worldgen.rs
