[package]
name = "soulspark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
env_logger = "0.10"
log = "0.4"
wgpu = {version = "0.19.3", features = ["serde"]}
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = {version = "0.24", default-features = false, features = ["png", "jpeg"]}
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
once_cell = "1.19.0"
instant = "0.1"
stopwatch = "0.0.7"
noise =  "0.8.2"
rand = "0.8.5"
splines = "4.3.1"
bitflags = "2.4.2"
cached = "0.49.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"]}
rayon = "1.10.0"
eframe = "0.27.2"
egui-wgpu = {version = "0.27.2", features = ["winit"]}
egui-winit = "0.27.2"
glam = "0.27.0"
getset = "0.1.2"
egui_extras = "0.27.2"
owning_ref = "0.4.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
copy_to_output = "2.2.0"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
